--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
 			<div class="about-wrapper">
 				<div class="about-me">
 					<h4>More about me</h4>
-				<p>I am a Web Developer with experience in Angular, Node.js ,React  with a willingness to learn and master Software Development and Full Stack Development.
-				I am adept in Python, Django, Flask, SQL, Machine Learning, Computer Vision and React .
+				<p>I am a Web Developer with experience in Angular, Node.js ,React  with a willingness to learn and master Full Stack Development.
+				I am adept in Python, Django, Flask, SQL, Angular and React .
 				 <p>Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.</p>
                   </p>
 
