--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 			<div class="about-wrapper">
 				<div class="about-me">
 					<h4>More about me</h4>
-				<p>I am a Web Developer with experience in Angular, Node.js ,React  with a willingness to learn and master Full Stack Development.
+				<p>I am a Web Developer with experience in Angular, Node.js ,Spring Boot  with a willingness to learn and master Full Stack Development.
 				I am adept in Python, Django, Flask, SQL, Angular and React .
 				 <p>Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.</p>
                   </p>
@@ -87,7 +87,7 @@
 
 					<h4>TOP EXPERTISE</h4>
 
-					<p>Data Analyst and Fullstack developer with primary focus on Angular + Node.js: <a target="_blank" href="resumes.pdf">Download Resume</a></p>
+					<p>Data Analyst and Fullstack developer with primary focus on Angular + Spring Boot: <a target="_blank" href="resumes.pdf">Download Resume</a></p>
 
 					<div id="skills">
 						<ul>
@@ -95,7 +95,7 @@
 							<li>Python</li>
 							<li>Node.js</li>
 							<li>JavaScript</li>
-							<li>React</li>
+							<li>Spring Boot</li>
 						</ul>
 
 						<ul>
