--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div class="about-me">
 					<h4>More about me</h4>
 				<p>I am a Web Developer with experience in Angular, Node.js ,Spring Boot  with a willingness to learn and master Full Stack Development.
-				I am adept in Python, Django, Flask, SQL, Angular and React .
+				I am adept in Python, Django, Flask, SQL, Angular and Spring Boot .
 				 <p>Looking for an opportunity to work in a challenging position combining my skills in Software Engineering, which provides professional development, interesting experiences and personal growth.</p>
                   </p>
 
@@ -102,7 +102,7 @@
 							<li>Google Maps API</li>
 							<li>Machine Learning</li>
 							<li>Data Science</li>
-							<li>Heroku</li>
+							<li>Java</li>
 							<li>HTML/CSS</li>
 						</ul>
 
